# iot-orchid

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  iot-orchid.code-workspace  main.go
.cargo/: config.toml
.github/workflows/: prod.yml
.sqlx/: query-065c2e0e9b38ef46475579321cf21615d88045b91e5107b9fb1144fbf5c34e39.json  query-0ab284e07c2886152d12223621d1b5fe87c08228c63a2952d06907c7c628fee4.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-4171246b403185fedeb8e7d9ad3b934ac6d9663d8e14d7bf26d5d652055a9f33.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-6a0821b026d62de334f710b0e4ac287d29a99f94860c9736c4d998eee8d10785.json  query-7e792d545bec4fc5afb0d146a2bf90d8ec3e7334e892faa36ad12a56f9ea6df4.json  query-87c6eea71a772b718469d5da05fab8596d88ccc30fcf4963ffdd377bb49d27f5.json  query-a9775f5fa7bcb17ab2ce5bead17607c39d7d1f1dbf1ef25775a0123a3e173bb2.json  query-ac25db0589f75aafcf36a4c3df4b1b1019f1af8d26dd45b5d4918986eebb8ee9.json  query-b089b122d5f24a02f2413d786d2c4e1d71810ee800764c8c8e1b19535eb7c49e.json  query-b0ddf1ff317c34087ce9f009b9f446826ff69ab1538144f42d6b94b06f2c8bb2.json  query-f9b9412cd2d56adba3094bb720a8dbbc6ab251c79b20d3a11870bcac06b91327.json  query-ff8f86d4d7275806561a0665f431a0f362d934c94ead9254a8c2f1029de5148b.json
api/: Cargo.toml
api/migrations/: 0002_tables.sql  0003_seed.sql
api/src/: main.rs
api/src/auth/: jwt.rs  mod.rs
api/src/model/: error.rs  mod.rs
api/src/model/store/: error.rs
api/src/web/: error.rs  guard.rs  mod.rs
api/src/web/routes/: logout.rs
api/src/web/rpc/: mod.rs
cmd/mqtt-listener/: config.yaml  main.go
cmd/registration-handler/: Dockerfile  main.go
config/: mosquitto.conf
firmware/demo/: CMakeLists.txt
internal/mqtt/: consumer.go  translator.go
migrations/: 0001_clusters_table.sql  0002_clusters_table.sql  0002_tables.sql  0003_seed.sql
mqtt-client/: go.mod  go.sum  main.go  send.go
mqtt-client/mqtt/: ingress.go
mqtt-client/test/: qmqp_test.go
rest-api/: Cargo.toml
rest-api/migrations/: 0001_drop.sql  0002_tables.sql  0003_seed.sql
rest-api/src/: main.rs
rest-api/src/events/: mod.rs
rest-api/src/model/: cluster.rs  mod.rs
rest-api/src/web/: mod.rs
rest-api/src/web/mqtt/: error.rs  mod.rs
rest-api/src/web/routes/: devices.rs  login.rs  mod.rs
src/: cluster.rs  main.rs  orchid_mqtt.rs  ping.rs
src/auth/: error.rs  jwt.rs  mod.rs
src/context/: mod.rs
src/events/: mod.rs
src/events/mqtt/: error.rs  mod.rs
src/model/: cluster.rs  device.rs  error.rs  mod.rs  user.rs
src/model/mqtt/: error.rs  mod.rs
src/model/store/: error.rs  mod.rs
src/web/: error.rs  guard.rs  jwt_auth.rs  mod.rs
src/web/mqtt/: mod.rs
src/web/routes/: api.rs  clusters.rs  login.rs  logout.rs  mod.rs
src/web/rpc/: mod.rs
