[package]
name = "iot-orchid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.12"
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
chrono = "0.4.34"
bcrypt = "0.11.0"
axum-auth = "0.7"
log = "^0.4"
env_logger = "^0.9"
async-trait = "0.1"